# pipeline-code-challenge

./: .env.example  .gitignore  Makefile  README.md  compose.yaml  pyproject.toml
.github/workflows/: workflow.yml
.run/: run stack.run.xml  run test.run.xml
common/: pyproject.toml
common/src/asset_common/: logging_utils.py
services/asset-service/: Dockerfile  entrypoint.sh  pyproject.toml
services/asset-service/alembic/: env.py  script.py.mako
services/asset-service/alembic/versions/: 3bfdc19afb2b_initial_schema.py
services/asset-service/src/asset_service/core/: repository.py
services/asset-service/src/asset_service/db/: connection.py
services/asset-service/src/assets/: cli.py  main.py
services/asset-service/src/assets/api/: routes.py
services/asset-service/src/assets/core/: exceptions.py  repository.py  service.py
services/asset-service/src/assets/core/validation/: base.py  rules.py  schema.py
services/asset-service/src/assets/db/: connection.py
services/asset-service/src/assets/db/models/: __init__.py  asset.py  asset_version.py  types.py
services/asset-service/src/assets/scripts/: data_loader.py
services/asset-service/src/assets/tests/: conftest.py  test_api.py  test_repository.py  test_rest_api.py  test_validation.py
traefik_config/: dynamic.yml
