[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeline-code-challenge"
version = "0.1.0"
description = "LAIKA Pipeline Engineering Coding Challenge"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Brett Bronson", email = "brett.bronson@gmail.com" }
]

dependencies = [

]

